--- a/scss/grid_codes.css
+++ b/scss/grid_codes.css
@@ -3,11 +3,9 @@
   display : grid;
   gap: 5px;
   height: 100vh;
-  grid-template-columns: repeat(4, 100px);
+  grid-template-columns: repeat(10, minmax(100px, 150px));
   grid-template-rows: repeat(4, 100px);
   grid-auto-rows: 100px;
-  grid-auto-flow: column;
-  grid-auto-columns: 100px;
 }
 div{
   color: white;
